fix disable wrapping in navigation on mobile devices

--- a/src/styles/landing.module.scss
+++ b/src/styles/landing.module.scss
@@ -29,6 +29,9 @@
     position: absolute;
     width: calc(100% - 30px);
   }
+  @media (max-width: 768px) {
+    flex-wrap: nowrap;
+  }
 }
 
 .logo {
